@@ -108,7 +108,7 @@
     </td>
     <td>1.8.0</td>  
     <td>
-<a href="mailto:neeracherATmacDOTcom>">Matthias Neeracher</a>
+<a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
     </td> 
   </tr>
 
@@ -183,7 +183,7 @@ src="http://www.debian.org/logos/openlogo-nd-50.png">
     <td>
 <b> go    <a href="http://www.pedrokroeger.net/lilypond/">here</a></b>
     </td>
-    <td>1.9.0</td>
+    <td>1.9.1</td>
     <td><a href="mailto:kroegerlistasATpedrokroegerDOTnet">
     Pedro Kroeger</td>
   </tr>
@@ -197,13 +197,13 @@ src="http://www.debian.org/logos/openlogo-nd-50.png">
       9
     </td>
     <td><b>Download 
-	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.9.1-1.i386.rpm">lilypond</a>,
+	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.9.2-1.i386.rpm">lilypond</a>,
 	
 	<a
-	href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.9.1-1.i386.rpm">documentation</a></b>
+	href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.9.2-1.i386.rpm">documentation</a></b>
 	(<a href="#redhat-notes">NOTE</a>)
     </td>
-    <td>1.9.1</td>  
+    <td>1.9.2</td>  
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
 
@@ -213,11 +213,11 @@ src="http://www.debian.org/logos/openlogo-nd-50.png">
 <td>Source</td><td></td>
 <td><b>Download 
 <a
-href="ftp://ftp.lilypond.org/pub/LilyPond/v1.9/lilypond-1.9.1.tar.gz">tarball</a>
+href="ftp://ftp.lilypond.org/pub/LilyPond/v1.9/lilypond-1.9.2.tar.gz">tarball</a>
 (<a href="../devel/#warning">warning</a>)
 </td>
 <td>
-1.9.1
+1.9.2
 </td>
    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
    team</a></td>
@@ -324,7 +324,7 @@ href="ftp://ftp.lilypond.org/pub/LilyPond/v1.9/lilypond-1.9.1.tar.gz">tarball</a
       Slackware 
     </td>
     <td>
-      ?
+    9
     </td>
     <td>
       <b>Download <a href="http://www.slackwarepackages.kit.net/lilypond-1.6.11-i386-1.tgz">here</a></b>
