@@ -1,5 +1,13 @@
 
 <dl>  
+  <dt>
+    August 21, 2003
+  </dt>
+  <dd>
+
+  LilyPond 1.8.1 was released. Get it <a href="download/">here</a>, or
+  read the <a href="http://savannah.gnu.org/cgi-bin/viewcvs/lilypond/lilypond/ChangeLog?rev=1.1258.2.1&only_with_tag=lilypond_1_8&content-type=text/vnd.viewcvs-markup">ChangeLog</a>.
+</dd>
 
   <dt>
     August 18, 2003
